<resources>
    <string name="app_name">部落冲突倒计时器</string>
    <string name="str_edit">编辑</string>
    <string name="str_add">添加</string>
    <string name="str_del">删除</string>
    <string name="acc_name">账号名</string>
    <string name="acc_eps">epsilon</string>
    <string name="acc_del">delta</string>
    <string name="project_name">项目名</string>
    <string name="cost_time">进行时间</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="time_hint">时间输入格式：ddhhmm</string>
    <string name="settings">设置</string>
    <string name="str_type">类别</string>
    <string name="home_building">家乡建筑</string>
    <string name="home_lab">家乡科技</string>
    <string name="night">夜世界</string>
    <string name="other">其它</string>
    <string name="speed_apprentice">用建筑工人学徒加速</string>
    <string name="speed_assistant">用实验助手加速</string>
    <string name="bell_tower">时光钟楼加速</string>
    <string name="apprentice_level">建筑工人学徒等级</string>
    <string name="assistant_level">实验助手等级</string>
    <string name="bell_tower_set">时光钟楼加速时长</string>
    <string name="bellTower_hint">时间输入格式：hmm</string>
    <string name="building_potion">建筑工人药水加速</string>
    <string name="lab_potion">研究药水加速</string>
    <string name="bellTower_potion">时光钟楼药水加速</string>
    <string name="save">保存</string>
    <string name="apprentice_hint">请输入0~8之间的整数</string>
    <string name="assistant_hint">请输入0~12之间的整数</string>
    <string name="bellTower_level_hint">请输入0~32之间的整数</string>
    <string name="refreshAllNotifications">刷新所有通知</string>
    <string name="customAccelerate">自定义加速</string>
    <string name="accelerateLen">加速时长</string>
    <string name="accelerateSpeed">加速倍率</string>
    <string name="accelerateLenHint">加速的分钟数: 1 ~ 32767</string>
    <string name="accelerateSpeedHint">加速的倍率: 2 ~ 127</string>
    <string name="buildersFeast">使用建筑工人大餐</string>
    <string name="studySoup">使用研究浓汤</string>
    <string name="customGlobalAcc">自定义全局加速</string>
    <string name="clear">清空</string>
    <string name="reset">重置</string>
</resources>